2012-08-21  Thiago Marcos P. Santos  <thiago.santos@intel.com>

        [EFL] Some public API functions don't have their symbols exported
        https://bugs.webkit.org/show_bug.cgi?id=94589

        Reviewed by Kenneth Rohde Christiansen.

        Added missing export symbol macro to these public API functions.

        * UIProcess/API/efl/ewk_view.h:

2012-08-21  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Using a native window for the WebView breaks GtkOverlay
        https://bugs.webkit.org/show_bug.cgi?id=90085

        Reviewed by Alejandro G. Castro.

        Add XComposite libraries to the linker list for WebKit2.

        * GNUmakefile.am: Add XComposite

2012-08-21  Jesse van den Kieboom  <jessevdk@gnome.org> and Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Add destroy notify for register_uri_scheme
        https://bugs.webkit.org/show_bug.cgi?id=94315

        Reviewed by Philippe Normand.

        For introspection to work correctly, a destroy notify needs to be
        added to register_uri_scheme so that bindings know when to
        finalize the user_data.

        * UIProcess/API/gtk/WebKitWebContext.cpp:
        (webkit_web_context_register_uri_scheme):
        (webkitWebContextReceivedURIRequest):
        * UIProcess/API/gtk/WebKitWebContext.h:
        * UIProcess/API/gtk/tests/TestWebKitWebContext.cpp:

2012-08-21  Simon Hausmann  <simon.hausmann@nokia.com>

        Unreviewed build fix for newer Qt 5: QT += qmltest does not imply QT += testlib anymore, but
        the code here needs QSignalSpy from QTestLib

        * UIProcess/API/qt/tests/qmltests/DesktopBehavior.pro:
        * UIProcess/API/qt/tests/qmltests/WebView.pro:

2012-08-18  John Sullivan  <sullivan@apple.com>

        <https://bugs.webkit.org/show_bug.cgi?id=94486>
        <rdar://problem/12128557>
        REGRESSION (r121482, Lion-only): Closing a popover containing a WKView can crash
        
        Reviewed by Darin Adler.
